cabal-version:      2.4
name:               h2fa
version:            0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Khan Mohammad R.
maintainer:         codemascot@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

-- library
--     exposed-modules:  OTP

--     -- Modules included in this library but not exported.
--     -- other-modules:

--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:
--     build-depends:    base ^>=4.14.3.0
--     hs-source-dirs:   src
--     default-language: Haskell2010

executable h2fa
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , time ^>=1.12.2
                    -- , string-class ^>=1.7.0
                    , bytestring ^>=0.10.12.0
                    , base32-lens ^>=0.1.1.1
                    , base32 ^>=0.2.2.0
                    , text ^>=1.2.5.0
                    , SHA ^>=1.6.4.4
    hs-source-dirs:   src
    default-language: Haskell2010
