cabal-version:      2.4
name:               h2fa
version:            0.0.1
synopsis:           TOTP and HOTP(HMAC) generetor from Base32 encrypted key

license:            MIT
license-file:       LICENSE
copyright:          2022 Khan Mohammad R.

description:        HOTP(HMAC) -> [RFC 4226](https://tools.ietf.org/html/rfc4226)
                    TOTP -> [RFC 6238](https://tools.ietf.org/html/rfc6238).

author:             Khan Mohammad R.
maintainer:         codemascot@hotmail.com

maintainer:         codemascot@hotmail.com
homepage:           https://github.com/codemascot/h2fa
bug-reports:        https://github.com/codemascot/h2fa/issues
category:           Cryptography
build-type:         Simple
tested-with:        GHC==8.10.7

extra-source-files: CHANGELOG.md
                    README.md

executable h2fa
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , time ^>=1.12.2
                    , bytestring ^>=0.10.12.0
                    , base32-lens ^>=0.1.1.1
                    , base32 ^>=0.2.2.0
                    , text ^>=1.2.5.0
                    , SHA ^>=1.6.4.4
    hs-source-dirs:   src
    default-language: Haskell2010
