cabal-version:      2.4
name:               h2fa
version:            0.0.1
synopsis:           TOTP and HOTP(HMAC) generetor from Base32 encrypted key

license:            MIT
license-file:       LICENSE
copyright:          2022 Khan Mohammad R.

description:        HOTP(HMAC) -> [RFC 4226](https://tools.ietf.org/html/rfc4226)
                    TOTP -> [RFC 6238](https://tools.ietf.org/html/rfc6238).

author:             Khan Mohammad R.
maintainer:         codemascot@hotmail.com

homepage:           https://github.com/codemascot/h2fa
bug-reports:        https://github.com/codemascot/h2fa/issues
category:           Cryptography
build-type:         Simple
tested-with:        GHC==8.10.7

extra-source-files: CHANGELOG.md
                    README.md

library
  exposed-modules:  HMAC.H2fa
  build-depends:    base ^>=4.14.3.0
                  , time ^>=1.12.2
                  , bytestring ^>=0.10.12.0
                  , base32-lens ^>=0.1.1.1
                  , base32 ^>=0.2.2.0
                  , text ^>=1.2.5.0
                  , SHA ^>=1.6.4.4
  hs-source-dirs:   src
  default-language: Haskell2010

executable h2fa
  main-is:          Main.hs
  build-depends:    base ^>=4.14.3.0
                  , time ^>=1.12.2
                  , bytestring ^>=0.10.12.0
                  , base32-lens ^>=0.1.1.1
                  , base32 ^>=0.2.2.0
                  , text ^>=1.2.5.0
                  , SHA ^>=1.6.4.4
  hs-source-dirs:   app src
  default-language: Haskell2010

test-suite tests
  type:             exitcode-stdio-1.0

  hs-source-dirs:   test src
  main-is:          Test.hs
  other-modules:    HMAC.H2fa

  default-language: Haskell2010
  other-extensions: OverloadedStrings

  build-depends:    base
                  , time
                  , bytestring
                  , base32-lens ^>=0.1.1.1
                  , base32 ^>=0.2.2.0
                  , text ^>=1.2.5.0
                  , SHA ^>=1.6.4.4
                  , tasty >= 1.1 && < 1.3
                  , tasty-hunit == 0.10.*

  ghc-options:      -Wall
